// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WelcomeBanner Rendering should match snapshot with custom labels 1`] = `
<View
  style={
    {
      "paddingBottom": 8,
      "paddingHorizontal": 20,
      "paddingTop": 4,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 40,
        "elevation": 1,
        "flexDirection": "row",
        "paddingHorizontal": 14,
        "paddingVertical": 12,
        "shadowColor": "#1F2A24",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 2,
      }
    }
  >
    <TouchableOpacity
      accessibilityLabel="Request a service"
      accessibilityRole="button"
      activeOpacity={0.7}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#3F8C7A",
          "borderRadius": 18,
          "height": 36,
          "justifyContent": "center",
          "marginRight": 12,
          "width": 36,
        }
      }
    >
      <Ionicons
        color="#FFFFFF"
        name="search"
        size={18}
      />
    </TouchableOpacity>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <TouchableOpacity
        activeOpacity={0.6}
        style={
          {
            "alignItems": "center",
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#1A2520",
              "fontSize": 11,
              "fontWeight": "600",
              "letterSpacing": 0.5,
              "textTransform": "uppercase",
            }
          }
        >
          Property
        </Text>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "color": "#4A5751",
                "fontSize": 13,
                "marginTop": 1,
              },
              {
                "color": "#1A2520",
                "fontWeight": "600",
              },
            ]
          }
        >
          123 Main St
        </Text>
      </TouchableOpacity>
      <View
        style={
          {
            "backgroundColor": "#D8E2DA",
            "height": 28,
            "width": 1,
          }
        }
      />
      <TouchableOpacity
        activeOpacity={0.6}
        style={
          {
            "alignItems": "center",
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#1A2520",
              "fontSize": 11,
              "fontWeight": "600",
              "letterSpacing": 0.5,
              "textTransform": "uppercase",
            }
          }
        >
          Urgency
        </Text>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "color": "#4A5751",
                "fontSize": 13,
                "marginTop": 1,
              },
              {
                "color": "#1A2520",
                "fontWeight": "600",
              },
            ]
          }
        >
          High
        </Text>
      </TouchableOpacity>
      <View
        style={
          {
            "backgroundColor": "#D8E2DA",
            "height": 28,
            "width": 1,
          }
        }
      />
      <TouchableOpacity
        activeOpacity={0.6}
        style={
          {
            "alignItems": "center",
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#1A2520",
              "fontSize": 11,
              "fontWeight": "600",
              "letterSpacing": 0.5,
              "textTransform": "uppercase",
            }
          }
        >
          Service
        </Text>
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#4A5751",
              "fontSize": 13,
              "marginTop": 1,
            }
          }
        >
          Browse all
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`WelcomeBanner Rendering should match snapshot with default props 1`] = `
<View
  style={
    {
      "paddingBottom": 8,
      "paddingHorizontal": 20,
      "paddingTop": 4,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 40,
        "elevation": 1,
        "flexDirection": "row",
        "paddingHorizontal": 14,
        "paddingVertical": 12,
        "shadowColor": "#1F2A24",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 2,
      }
    }
  >
    <TouchableOpacity
      accessibilityLabel="Request a service"
      accessibilityRole="button"
      activeOpacity={0.7}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#3F8C7A",
          "borderRadius": 18,
          "height": 36,
          "justifyContent": "center",
          "marginRight": 12,
          "width": 36,
        }
      }
    >
      <Ionicons
        color="#FFFFFF"
        name="search"
        size={18}
      />
    </TouchableOpacity>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <TouchableOpacity
        activeOpacity={0.6}
        style={
          {
            "alignItems": "center",
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#1A2520",
              "fontSize": 11,
              "fontWeight": "600",
              "letterSpacing": 0.5,
              "textTransform": "uppercase",
            }
          }
        >
          Property
        </Text>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "color": "#4A5751",
                "fontSize": 13,
                "marginTop": 1,
              },
              null,
            ]
          }
        >
          Select
        </Text>
      </TouchableOpacity>
      <View
        style={
          {
            "backgroundColor": "#D8E2DA",
            "height": 28,
            "width": 1,
          }
        }
      />
      <TouchableOpacity
        activeOpacity={0.6}
        style={
          {
            "alignItems": "center",
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#1A2520",
              "fontSize": 11,
              "fontWeight": "600",
              "letterSpacing": 0.5,
              "textTransform": "uppercase",
            }
          }
        >
          Urgency
        </Text>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "color": "#4A5751",
                "fontSize": 13,
                "marginTop": 1,
              },
              null,
            ]
          }
        >
          Medium
        </Text>
      </TouchableOpacity>
      <View
        style={
          {
            "backgroundColor": "#D8E2DA",
            "height": 28,
            "width": 1,
          }
        }
      />
      <TouchableOpacity
        activeOpacity={0.6}
        style={
          {
            "alignItems": "center",
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#1A2520",
              "fontSize": 11,
              "fontWeight": "600",
              "letterSpacing": 0.5,
              "textTransform": "uppercase",
            }
          }
        >
          Service
        </Text>
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#4A5751",
              "fontSize": 13,
              "marginTop": 1,
            }
          }
        >
          Browse all
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;
